--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     - Compres it with factorty video
     - Upload it to github via command or github desktop
      -->
+    <!-- Deploy locally: have npm installed in local env and run: live-server -->
     <!-- particles.js container --> 
     <div id="particles-js">
         <div id="typewriter"></div>
